# controllers/UserController.go
@@ -16,7 +16,7 @@ type UserController struct {
 //@Title Login
 //@Description Login
 //@Summary "Login"
-// @Params username body models.Authorize true
+// @Params username body models.Authorize true "username"
 //@Success 200
 //@Failure 404
 //@router /login [post]
@@ -49,19 +49,19 @@ func (this *UserController) Login() {
 //@Title Signup
 //@Description Signup
 //@Summary "Signup"
-// @Params username body
+// @Params username body models.Authorize true "username"
 //@Success 200
 //@Failure 404
 //@router /signup [post]
-func (this *UserController) Signup(){
+func (this *UserController) Signup() {
 	defer this.ServeJSON()
-	
+
 	// err := json.Unmarshal(this.Ctx.Input.RequestBody)
 	// if err != nil {
 	// 	this.Data["json"] = ""
 	// 	return
 	// }
-	
+
 	// if err != nil {
 	// 	this.Data["json"] = "sai"
 	// 	return
