# swagger/swagger.json
@@ -93,7 +93,7 @@
                 }
             }
         },
-        "/user/": {
+        "/user/login": {
             "post": {
                 "tags": [
                     "user"
@@ -105,7 +105,37 @@
                     {
                         "in": "body",
                         "name": "username",
-                        "description": "true",
+                        "description": "username",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Authorize"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "404": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/user/signup": {
+            "post": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "\"Signup\"",
+                "description": "Signup",
+                "operationId": "UserController.Signup",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "username",
+                        "description": "username",
+                        "required": true,
                         "schema": {
                             "$ref": "#/definitions/models.Authorize"
                         }
